[metadata]
name = bertdotssh
author = Engelbert Tejeda
author_email = berttejeda@gmail.com
description = Utility library for command invocation via ssh
version: 1.0.1
url = https://github.com/berttejeda/bert.ssh.git
keywords =
  ssh 
  command
  python
  invoke
  remote
  invocation
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
  wheel >= 0.31
packages = find:
zip_safe: False
scripts =
#  somescript.py
install_requires =
  paramiko==2.7.0

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]